# cppCollection

./: README.md  cppGems.cpp
FindDllPath/: FindDllPath.snippet.cpp  cppGems.cpp
QSettingsCustomClass/: CMakeLists.txt  CustomClass.cpp  CustomClass.h  README.md  main.cpp
Qt/QML/: main.cpp  wobble.pro  wobble.qml  wobble.qrc
